# cargo-nbuild

./: .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: rust.yml
nbuild/: Cargo.toml
nbuild-core/: Cargo.toml  README.md
nbuild-core/src/: lib.rs
nbuild-core/src/models/: mod.rs  nix.rs
nbuild-core/src/models/cargo/: mod.rs  visitor.rs
nbuild-core/src/visitor/: mod.rs
nbuild-core/tests/simple/: Cargo.toml  expected.nix
nbuild-core/tests/simple/src/: main.rs
nbuild-core/tests/workspace/: Cargo.toml
nbuild-core/tests/workspace/child/: Cargo.toml
nbuild-core/tests/workspace/child/src/: lib.rs
nbuild-core/tests/workspace/parent/: Cargo.toml  expected.nix
nbuild-core/tests/workspace/parent/src/: main.rs
nbuild-core/tests/workspace/rename/: Cargo.toml
nbuild-core/tests/workspace/targets/: Cargo.toml
nbuild-core/tests/workspace/targets/src/: lib.rs
nbuild/src/: main.rs
