[package]
name = "nbuild-core"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for cargo-nbuild"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-lock = "9.0.0"
cargo_metadata = "0.15.4"
target-spec = "1.4.0"
thiserror = "1.0.40"
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.3.0"
