[package]
name = "cargo-nbuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nbuild-core = { path = "../nbuild-core" }
tokio = { version = "1.28.1", features = ["io-util", "macros", "process", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
