[package]
name = "parent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
child = { path = "../child", default-features = false, features = ["one"] }
libc = "0.2"
itoa = "0.4"

targets = { path = "../targets" }

[target.'cfg(windows)'.dependencies]
targets = { path = "../targets", features = ["windows"] }

[target.'cfg(unix)'.dependencies]
targets = { path = "../targets", features = ["unix"] }
